ADD fontawesome script

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="next-list__num4-singer"></div>
             </div>
         </div>
-    </div>
+    </div> 
+    <script src="https://kit.fontawesome.com/0e69f9ea4c.js" crossorigin="anonymous"></script>
 </body>
 </html>
