--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="playlist">
         <div class="status-bar">
             <div class="status-bar__column">
                 <span>
-                    <!-- todo : x icon -->
+                    <i class="fas fa-times"></i>
                 </span>
             </div>
             <div class="status-bar__column">
