ADD album info, play buttons

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
             </div>
         </div>
         <div class="now-playing">
-            <div class="now-playing__album-photo"></div>
+            <div class="now-playing__album-photo">
+                <span><i class="fas fa-compact-disc fa-3x"></i></span>
+            </div>
             <div class="now-playing__album-title">
-                <div class="now-playing__album-title-big">How was your day?</div>
-                <div class="now-playing__album-title-sm">by Life is Joy</div>
+                <div class="now-playing__album-title-big">How Was Your Day?</div>
+                <div class="now-playing__album-title-sm">by LifeIsJoy</div>
             </div>
 
         </div>
         <div class="play-buttons">
             <div class="play-buttons__play">
-                <button>play</button>
+                <div><i class="fas fa-play"></i><span>PLAY</span></div>
             </div>
             <div class="play-buttons__like">
-                <!-- todo: heart icon -->
+                <i class="far fa-heart fa-2x"></i>
             </div>
             <div class="play-buttons__add">
-                <!-- todo: plus icon -->
+                <i class="fas fa-plus fa-2x"></i>
             </div>
         </div>
         <div class="next-list">
