ADD final version

--- a/index.html
+++ b/index.html
@@ -40,25 +40,34 @@
             </div>
         </div>
         <div class="next-list">
-            <div class="next-list__num1">
-                <div class="next-list__num1-photo"></div>
-                <div class="next-list__num1-title"></div>
-                <div class="next-list__num1-singer"></div>
+            <div class="next-list__num">
+                <div class="next-list__num-photo"></div>
+                <div class="next-list__num-info">
+                    <div class="next-list__num-title">Carpediem!</div>
+                    <div class="next-list__num-singer">Mohit Cahun</div>
+                </div>
+                
             </div>
-            <div class="next-list__num2">
-                <div class="next-list__num2-photo"></div>
-                <div class="next-list__num2-title"></div>
-                <div class="next-list__num2-singer"></div>
+            <div class="next-list__num">
+                <div class="next-list__num-photo"></div>
+                <div class="next-list__num-info">
+                    <div class="next-list__num-title">The Awesome Night</div>
+                    <div class="next-list__num-singer">Lewis OfMan ・ Party</div>
+                </div>
             </div>
-            <div class="next-list__num3">
-                <div class="next-list__num3-photo"></div>
-                <div class="next-list__num3-title"></div>
-                <div class="next-list__num3-singer"></div>
+            <div class="next-list__num">
+                <div class="next-list__num-photo"></div>
+                <div class="next-list__num-info">
+                    <div class="next-list__num-title">Wear Mask</div>
+                    <div class="next-list__num-singer">Joseph Vincent ・ Covid19</div>
+                </div>
             </div>
-            <div class="next-list__num4">
-                <div class="next-list__num4-photo"></div>
-                <div class="next-list__num4-title"></div>
-                <div class="next-list__num4-singer"></div>
+            <div class="next-list__num">
+                <div class="next-list__num-photo"></div>
+                <div class="next-list__num-info">
+                    <div class="next-list__num-title">The Happy Moment</div>
+                    <div class="next-list__num-singer">Shakira ・ 2021</div>
+                </div>
             </div>
         </div>
     </div> 
